<resources>
    <string name="app_name">My Pantry</string>
    <string name="title_activity_my_pantry">My Pantry</string>
    <string name="title_activity_scan_the_product">Scan the product\'s code</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="title_activity_app_settings">Application settings</string>
    <string name="title_activity_print_qrcodes">Print QR Codes</string>
    <string name="title_activity_product_details">Product details</string>
    <string name="title_activity_edit_product">Edit product</string>
    <string name="title_activity_add_photo">Add photo</string>
    <string name="title_activity_error_and_maintenance_work">Errors and maintenance work</string>
    <string name="General_choose">Choose</string>
    <string name="General_char_counter">Max characters</string>
    <string name="General_press_back_agait_to_exit">Press back again to exit</string>
    <string name="General_required">(Required)</string>
    <string name="General_not_required">(Not required)</string>
    <string name="General_cancel">Cancel</string>
    <string name="General_author_label">Author</string>
    <string name="General_save">Save</string>
    <string name="General_user_is_premium">The user is already Premium ;-)</string>
    <string name="General_user">User</string>
    <string name="General_loggedOut">Logged out</string>
    <string name="General_premium_purchase_done">Thank you for your premium purchase! Wish you enjoy your use!</string>
    <string name="General_are_you_sure_delete_product">Are you sure you want to delete this product?</string>
    <string name="MainActivity_my_pantry_button">My pantry</string>
    <string name="MainActivity_scan_product_button">Scan the product\'s code</string>
    <string name="MainActivity_new_product_button">New product</string>
    <string name="MainActivity_own_categories_button">Own product categories</string>
    <string name="MainActivity_storage_locations_button">Storage locations</string>
    <string name="MainActivity_app_settings_button">Application settings</string>
    <string name="MyPantryActivity_products_not_found">Oops! Not found products :(</string>
    <string name="MyPantryActivity_clear">Clear</string>
    <string name="MyPantryActivity_since">since</string>
    <string name="MyPantryActivity_for">for</string>
    <string name="MyPantryActivity_set">Set</string>
    <string name="MyPantryActivity_clear_filters">Clear filters</string>
    <string name="MyPantryActivity_delete_products">Delete products</string>
    <string name="MyPantryActivity_do_you_want_to_delete_products">Do you want to delete selected products?</string>
    <string name="MyPantryActivity_with_sugar">+Sugar</string>
    <string name="MyPantryActivity_with_salt">+Salt</string>
    <string name="ScanProductActivity_choose_scan_type">Choose whether you want to scan the QR of the product created by the application or scan the barcode of the store product.</string>
    <string name="ScanProductActivity_choose_product_to_copy">The barcode has been added to the following products. Select the product you want to add from the list.</string>
    <string name="ScanProductActivity_scan_qr_code">Scan QR code of the product</string>
    <string name="ScanProductActivity_scan_barcode">Scan the product barcode</string>
    <string name="ScanProductActivity_enter_barcode_manually">Enter the barcode manually</string>
    <string name="ScanProductActivity_product_not_found">Product was not found.</string>
    <string name="ScanProductActivity_scanner_hint">Important: The barcode scanner does not search for products that have not been previously added to the application.</string>
    <string name="ScanProductActivity_barcode_is_updated">Barcode has been updated</string>
    <string name="NewProductActivity_add_a_product">Add a product</string>
    <string name="NewProductActivity_product_added_successful">The product has been added to the product database.</string>
    <string name="NewProductActivity_products_added_successful">The products has been added to the product database.</string>
    <string name="NewProductActivity_cancel_product_adding">Do you want to cancel adding a new product?</string>
    <string name="NewProductActivity_quantity_value" translatable="false">1</string>
    <string name="NewProductActivity_volume_value" translatable="false">0</string>
    <string name="NewProductActivity_weight_value" translatable="false">0</string>
    <string name="StorageLocationsActivity_new_storage_location">New storage location</string>
    <string name="StorageLocationsActivity_no_storage_locations_statement">No storage locations added. Add a new button at the top of the screen.</string>
    <string name="StorageLocationDetailsActivity_name">Storage location name</string>
    <string name="StorageLocationDetailsActivity_description">Storage location description</string>
    <string name="StorageLocationDetailsActivity_update_storage_location">Save changes</string>
    <string name="StorageLocationDetailsActivity_delete_storage_location">Delete storage location</string>
    <string name="StorageLocationDetailsActivity_storage_location_delete_warning">Are you sure you want to delete this storage location?</string>
    <string name="StorageLocationDetailsActivity_storage_location_was_saved">Storage location was saved</string>
    <string name="CategoriesActivity_new_category">New category</string>
    <string name="CategoriesActivity_no_categories_statement">No categories added. Add a new button at the top of the screen.</string>
    <string name="CategoryDetailsActivity_name">Category name</string>
    <string name="CategoryDetailsActivity_description">Category description</string>
    <string name="CategoryDetailsActivity_update_category">Save changes</string>
    <string name="CategoryDetailsActivity_delete_category">Delete category</string>
    <string name="CategoryDetailsActivity_category_delete_warning">Are you sure you want to delete this category?</string>
    <string name="CategoryDetailsActivity_category_was_saved">Category was saved</string>
    <string name="EditProductActivity_save_product">Save product</string>
    <string name="EditProductActivity_cancel">Cancel</string>
    <string name="EditProductActivity_product_was_updated">Product was saved</string>
    <string name="AddPhotoActivity_photo_description">Photo description</string>
    <string name="AddPhotoActivity_take_photo">Take photo</string>
    <string name="AddPhotoActivity_save_photo">Save photo</string>
    <string name="AddPhotoActivity_delete_photo">Delete photo</string>
    <string name="AddPhotoActivity_take_photo_of_product">Take photo of the product</string>
    <string name="AddPhotoActivity_no_camera_access">No camera access</string>
    <string name="AddPhotoActivity_invalid_photo_description">Invalid photo description</string>
    <string name="AddPhotoActivity_add_photo_successful">The photo has been added</string>
    <string name="AddPhotoActivity_add_photo_not_successful">The photo was not added</string>
    <string name="AddPhotoActivity_delete_photo_successful">The photo has been deleted</string>
    <string name="Product_name">Name</string>
    <string name="Product_quantity">Quantity</string>
    <string name="Product_expiration_date">Expiration date</string>
    <string name="Product_production_date">Production date</string>
    <string name="Product_composition">Composition</string>
    <string name="Product_features">Product features</string>
    <string name="Product_has_sugar">Has a sugar?</string>
    <string name="Product_has_salt">Has a salt?</string>
    <string name="Product_bio">BIO</string>
    <string name="Product_vege">VEGE</string>
    <string name="Product_taste">Taste</string>
    <string name="Product_sweet">Sweet</string>
    <string name="Product_sour">Sour</string>
    <string name="Product_sweet_and_sour">Sweet and Sour</string>
    <string name="Product_bitter">Bitter</string>
    <string name="Product_salty">Salty</string>
    <string name="Product_spicy">Spicy</string>
    <string name="Product_weight">Weight</string>
    <string name="Product_weight_unit">g</string>
    <string name="Product_volume">Volume</string>
    <string name="Product_volume_unit">ml</string>
    <string name="Product_healing_properties">Healing properties</string>
    <string name="Product_dosage">Dosage</string>
    <string name="Product_type">Product type</string>
    <string-array name="Product_type_of_product_array">
        <item>Choose</item>
        <item>Own categories</item>
        <item>Store products</item>
        <item>Ready meals</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Herbs</item>
        <item>Liqueurs</item>
        <item>Wines</item>
        <item>Mushrooms</item>
        <item>Vinegars</item>
        <item>Chemical products</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_choose_array">
        <item>Choose</item>
    </string-array>
    <string name="Product_choose">Choose</string>
    <string name="Product_category">Product category</string>
    <string-array name="ProductDetailsActivity_store_products_array">
        <item>Choose</item>
        <item>Store products</item>
    </string-array>
    <string-array name="Product_ready_meals_array">
        <item>Choose</item>
        <item>Ready meals</item>
    </string-array>
    <string-array name="Product_vegetables_array">
        <item>Choose</item>
        <item>Preserved</item>
        <item>Salads</item>
        <item>Marinate</item>
        <item>Ketchups</item>
        <item>Fresh</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_fruits_array">
        <item>Choose</item>
        <item>Jam</item>
        <item>Juice</item>
        <item>Syrup</item>
        <item>Mousse</item>
        <item>Compote</item>
        <item>Jelly</item>
        <item>Marmalades</item>
        <item>Fresh</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_herbs_array">
        <item>Choose</item>
        <item>Dried</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_liqueurs_array">
        <item>Choose</item>
        <item>Liqueurs</item>
    </string-array>
    <string-array name="Product_wines_type_array">
        <item>Choose</item>
        <item>Dry</item>
        <item>Semi-dry</item>
        <item>Semi-sweet</item>
        <item>Sweet</item>
    </string-array>
    <string-array name="Product_mushrooms_array">
        <item>Choose</item>
        <item>Marinate</item>
        <item>Salt</item>
        <item>Dried</item>
    </string-array>
    <string-array name="Product_vinegars_array">
        <item>Choose</item>
        <item>Apple</item>
        <item>Herb</item>
        <item>Fruit</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_chemical_products_array">
        <item>Choose</item>
        <item>Cleaning products</item>
        <item>Liquids</item>
        <item>Powders</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_other_products_array">
        <item>Choose</item>
        <item>Other</item>
    </string-array>
    <string-array name="Product_taste_array">
        <item>Choose</item>
        <item>Sweet</item>
        <item>Sour</item>
        <item>Sweet and Sour</item>
        <item>Bitter</item>
        <item>Salty</item>
        <item>Spicy</item>
    </string-array>
    <string name="Product_storage_location">Storage location</string>
    <string name="ProductDetailsActivity_not_set">Not specified</string>
    <string name="ProductDetailsActivity_delete_product">Delete product</string>
    <string name="Author_contact_with_author">Contact with author</string>
    <string name="Author_website" translatable="false">https://www.mypantry.eu/kontakt/</string>
</resources>