<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2019.                                                       ~
  ~ Mateusz Hermanowicz                                                       ~
  ~ My Pantry                                                                 ~
  ~ https://www.mypantry.eu                                                   ~
  ~ Released under Apache License Version 2.0                                 ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edittext_productionDateSince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/MyPantryActivity_since"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edittext_productionDateFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/edittext_productionDateSince"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/MyPantryActivity_for"
        android:inputType="date"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/edittext_productionDateFor"
        android:text="@string/MyPantryActivity_clear"/>
</RelativeLayout>