<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019-2021
  ~ Mateusz Hermanowicz - All rights reserved.
  ~ My Pantry
  ~ https://www.mypantry.eu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.CategoriesActivity">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/StorageLocationDetailsActivity_name"
        android:textColor="@color/text_color"
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/nameValue"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:hint="@string/General_required"
        android:inputType="textCapSentences"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/nameCharCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_goneMarginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/General_char_counter"
        android:textColor="@color/text_color"
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameCharCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/StorageLocationDetailsActivity_description"
        android:textColor="@color/text_color"
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/descriptionValue"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:maxLines="5"
        android:text=""
        android:hint="@string/General_not_required"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/descriptionCharCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_goneMarginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/General_char_counter"
        android:textColor="@color/text_color"
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>