<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019-2021
  ~ Mateusz Hermanowicz - All rights reserved.
  ~ My Pantry
  ~ https://www.mypantry.eu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="300dp"
    android:minHeight="300dp">

    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/General_author_label"
        android:fontFamily="@font/proxima_nova_scosf_extra_condensed_bold"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/linkedIn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/linkedin"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        android:contentDescription="" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/facebook"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/linkedIn"
        app:layout_constraintStart_toEndOf="@id/linkedIn"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="" />

    <TextView
        android:id="@+id/contactWithAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Author_contact_with_author"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/proxima_nova_scosf_extra_condensed_bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/myPantryWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Author_website"
        android:fontFamily="@font/proxima_nova_extra_condensed_bold"
        android:textColorLink="@color/text_color"
        android:textSize="20sp"
        android:autoLink="web"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/contactWithAuthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>